--- a/main.css
+++ b/main.css
@@ -25,7 +25,6 @@ h3 {
 	width: 90%;
 }
 
-section header
 
 tech_table
 
@@ -33,7 +32,10 @@ code_snippet
 
 img_container
 
-byline
+.byline {
+	color: grey;
+	width: 90%;
+}
 
 user_comments
 
