--- a/main.css
+++ b/main.css
@@ -117,7 +117,7 @@ img {
 	margin-bottom: 5vh;
 }
 
-.strikethrough-line1 {
+.strikethrough-line {
 	display: inline-block;
 	width: 100%;
 	height: 50%;
@@ -126,11 +126,12 @@ img {
 }
 
 .strikethrough-txt {
-	display: inline-block;
+	display: inline;
 	color: #b3b3b3;
 	background-color: #e6e6e6;
 	vertical-align: middle;
 	margin:0 3vh;
+	padding: 0 5px;
 }
 
 .entry_field {
